--- a/simple_frontend/index.html
+++ b/simple_frontend/index.html
@@ -6,22 +6,34 @@
     <title>Simple Greeting Frontend</title>
 </head>
 <body>
-    <h1>Greeting Service</h1>
-    <input type="text" id="nameInput" placeholder="Enter your name">
-    <button onclick="getGreeting()">Greet Me</button>
-    <div id="response"></div>
+    <div class="container">
+        <h1>Greeting Service</h1>
+        <div class="subtitle">Enter your name to get a personalized greeting from the backend API.</div>
+        <div class="input-group">
+            <input type="text" id="nameInput" placeholder="For example, Alice">
+            <button onclick="getGreeting()">Greet Me</button>
+        </div>
+        <div id="response"></div>
+    </div>
     <script>
         async function getGreeting() {
             const name = document.getElementById('nameInput').value || 'World';
             const responseDiv = document.getElementById('response');
+            responseDiv.style.opacity = 0.5;
             responseDiv.textContent = 'Loading...';
             try {
                 const res = await fetch(`/api/greet?name=${encodeURIComponent(name)}`);
                 if (!res.ok) throw new Error('Network error');
                 const data = await res.json();
-                responseDiv.textContent = data.greeting;
+                setTimeout(() => {
+                    responseDiv.textContent = data.greeting;
+                    responseDiv.style.opacity = 1;
+                }, 200);
             } catch (e) {
-                responseDiv.textContent = 'Error: Could not connect to backend.';
+                setTimeout(() => {
+                    responseDiv.textContent = 'Error: Could not connect to backend.';
+                    responseDiv.style.opacity = 1;
+                }, 200);
             }
         }
     </script>
