--- a/simple_frontend/index.html
+++ b/simple_frontend/index.html
@@ -4,7 +4,134 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Greeting Service</title>
-    <!-- No CSS, only HTML -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Inter', Arial, sans-serif;
+            background: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
+            min-height: 100vh;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        .container {
+            background: #fff;
+            padding: 48px 36px 36px 36px;
+            border-radius: 22px;
+            box-shadow: 0 12px 40px rgba(0,0,0,0.13);
+            text-align: center;
+            min-width: 340px;
+            max-width: 95vw;
+            border: 1.5px solid #fda085;
+            position: relative;
+            animation: fadeIn 0.7s;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(30px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+        .logo {
+            width: 54px;
+            height: 54px;
+            margin-bottom: 10px;
+        }
+        h1 {
+            color: #f76d6d;
+            margin-bottom: 12px;
+            font-size: 2.3em;
+            letter-spacing: 1.5px;
+            font-weight: 700;
+            text-shadow: 0 2px 8px rgba(253,160,133,0.08);
+        }
+        .subtitle {
+            color: #7f8c8d;
+            margin-bottom: 22px;
+            font-size: 1.13em;
+            line-height: 1.5;
+        }
+        .input-group {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-bottom: 10px;
+            gap: 8px;
+        }
+        input[type="text"] {
+            padding: 14px 18px;
+            border-radius: 10px;
+            border: 1.5px solid #fda085;
+            font-size: 1.1em;
+            width: 220px;
+            transition: border 0.2s, box-shadow 0.2s;
+            box-shadow: 0 2px 8px rgba(253, 160, 133, 0.08);
+            background: #fffdfa;
+        }
+        input[type="text"]:focus {
+            border-color: #f76d6d;
+            outline: none;
+            box-shadow: 0 0 0 3px rgba(253, 160, 133, 0.13);
+        }
+        button {
+            padding: 14px 32px;
+            border: none;
+            border-radius: 10px;
+            background: linear-gradient(90deg, #fda085 0%, #f6d365 100%);
+            color: #fff;
+            font-size: 1.1em;
+            font-weight: 700;
+            cursor: pointer;
+            box-shadow: 0 4px 18px rgba(253,160,133,0.13);
+            transition: background 0.2s, transform 0.2s, box-shadow 0.2s;
+            letter-spacing: 0.5px;
+            outline: none;
+        }
+        button:active {
+            box-shadow: 0 2px 8px rgba(253,160,133,0.10);
+            transform: scale(0.98);
+        }
+        button:hover {
+            background: linear-gradient(90deg, #f6d365 0%, #fda085 100%);
+            transform: translateY(-2px) scale(1.04);
+        }
+        #response {
+            margin-top: 32px;
+            font-size: 1.3em;
+            color: #f76d6d;
+            font-weight: 700;
+            min-height: 36px;
+            transition: opacity 0.4s;
+            word-break: break-word;
+            letter-spacing: 0.2px;
+        }
+        .footer {
+            margin-top: 40px;
+            color: #aaa;
+            font-size: 0.98em;
+            text-align: center;
+            letter-spacing: 0.2px;
+        }
+        @media (max-width: 480px) {
+            .container {
+                min-width: 90vw;
+                padding: 20px 5vw;
+            }
+            input[type="text"] {
+                width: 100px;
+            }
+            .input-group {
+                flex-direction: column;
+                gap: 10px;
+            }
+            button {
+                width: 100%;
+            }
+            .logo {
+                width: 38px;
+                height: 38px;
+            }
+        }
+    </style>
 </head>
 <body>
     <div class="container">
