--- a/simple_frontend/index.html
+++ b/simple_frontend/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Greeting Service</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Inter', Arial, sans-serif;
-            background: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
+            font-family: 'Roboto', Arial, sans-serif;
+            background: linear-gradient(135deg, #232526 0%, #414345 100%);
             min-height: 100vh;
             margin: 0;
             display: flex;
@@ -16,14 +16,14 @@
             align-items: center;
         }
         .container {
-            background: #fff;
+            background: #232526;
             padding: 48px 36px 36px 36px;
-            border-radius: 22px;
-            box-shadow: 0 12px 40px rgba(0,0,0,0.13);
+            border-radius: 18px;
+            box-shadow: 0 12px 40px rgba(0,0,0,0.25);
             text-align: center;
             min-width: 340px;
             max-width: 95vw;
-            border: 1.5px solid #fda085;
+            border: 1.5px solid #00c6ff;
             position: relative;
             animation: fadeIn 0.7s;
         }
@@ -35,17 +35,18 @@
             width: 54px;
             height: 54px;
             margin-bottom: 10px;
+            filter: drop-shadow(0 2px 8px #00c6ff33);
         }
         h1 {
-            color: #f76d6d;
+            color: #00c6ff;
             margin-bottom: 12px;
             font-size: 2.3em;
             letter-spacing: 1.5px;
             font-weight: 700;
-            text-shadow: 0 2px 8px rgba(253,160,133,0.08);
+            text-shadow: 0 2px 8px #00c6ff33;
         }
         .subtitle {
-            color: #7f8c8d;
+            color: #e0e0e0;
             margin-bottom: 22px;
             font-size: 1.13em;
             line-height: 1.5;
@@ -60,44 +61,45 @@
         input[type="text"] {
             padding: 14px 18px;
             border-radius: 10px;
-            border: 1.5px solid #fda085;
+            border: 1.5px solid #00c6ff;
             font-size: 1.1em;
             width: 220px;
             transition: border 0.2s, box-shadow 0.2s;
-            box-shadow: 0 2px 8px rgba(253, 160, 133, 0.08);
-            background: #fffdfa;
+            box-shadow: 0 2px 8px #00c6ff22;
+            background: #2c2f34;
+            color: #fff;
         }
         input[type="text"]:focus {
-            border-color: #f76d6d;
+            border-color: #00c6ff;
             outline: none;
-            box-shadow: 0 0 0 3px rgba(253, 160, 133, 0.13);
+            box-shadow: 0 0 0 3px #00c6ff33;
         }
         button {
             padding: 14px 32px;
             border: none;
             border-radius: 10px;
-            background: linear-gradient(90deg, #fda085 0%, #f6d365 100%);
+            background: linear-gradient(90deg, #00c6ff 0%, #0072ff 100%);
             color: #fff;
             font-size: 1.1em;
             font-weight: 700;
             cursor: pointer;
-            box-shadow: 0 4px 18px rgba(253,160,133,0.13);
+            box-shadow: 0 4px 18px #00c6ff22;
             transition: background 0.2s, transform 0.2s, box-shadow 0.2s;
             letter-spacing: 0.5px;
             outline: none;
         }
         button:active {
-            box-shadow: 0 2px 8px rgba(253,160,133,0.10);
+            box-shadow: 0 2px 8px #00c6ff11;
             transform: scale(0.98);
         }
         button:hover {
-            background: linear-gradient(90deg, #f6d365 0%, #fda085 100%);
+            background: linear-gradient(90deg, #0072ff 0%, #00c6ff 100%);
             transform: translateY(-2px) scale(1.04);
         }
         #response {
             margin-top: 32px;
             font-size: 1.3em;
-            color: #f76d6d;
+            color: #00c6ff;
             font-weight: 700;
             min-height: 36px;
             transition: opacity 0.4s;
